examples/micro-services/services/service1/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service1-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1
spec:
  hosts:
  - "*"
  gateways:
  - service1-gateway
  http:
  - match:
    - uri:
        prefix: /version
    route:
    - destination:
        port:
          number: 3001
        host: service1
